<?xml version="1.0"?>
<package format="2">
  <name>arm20_description</name>
  <version>0.0.0</version>
  <description>The arm20_description package</description>
  <maintainer email="aescuredo@todo.todo">aescuredo</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>


</package>
