<?xml version="1.0"?>
<package format="2">
  <name>arm20_gazebo</name>
  <version>0.0.0</version>
  <description>The arm20_gazebo package</description>

  
  <maintainer email="aescuredo@todo.todo">aescuredo</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>rosbot_description</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>rosbot_description</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>rosbot_description</exec_depend>
  <exec_depend>xacro</exec_depend>


</package>
