<?xml version="1.0"?>
<package format="2">
  <name>arm20_srv</name>
  <version>0.0.0</version>
  <description>The arm20 service package</description>


  <maintainer email="aescuredo@todo.todo">aescuredo</maintainer>



  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
    
  

  
</package>
